// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="text-center text-sm-left row"
>
  <div
    className="col-sm-auto col-12"
  >
    <svg
      height="80"
      width="80"
    >
      <circle
        cx="40"
        cy="40"
        fill="white"
        r="37"
        stroke="black"
        strokeWidth="3"
      />
      <circle
        cx="40"
        cy="30"
        fill="black"
        r="10"
      />
      <path
        d="M 20 60 q 20 -30 40 0"
        fill="black"
      />
    </svg>
  </div>
  <div
    className="col"
  >
    <div>
      <h5>
        Jan Kowalski
      </h5>
    </div>
    <div />
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <div
    class="text-center text-sm-left row"
  >
    <div
      class="col-sm-auto col-12"
    >
      <svg
        height="80"
        width="80"
      >
        <circle
          cx="40"
          cy="40"
          fill="white"
          r="37"
          stroke="black"
          stroke-width="3"
        />
        <circle
          cx="40"
          cy="30"
          fill="black"
          r="10"
        />
        <path
          d="M 20 60 q 20 -30 40 0"
          fill="black"
        />
      </svg>
    </div>
    <div
      class="col"
    >
      <div>
        <h5>
          Jan Kowalski
        </h5>
      </div>
      <div />
    </div>
  </div>
</div>
`;
